# flet-app

./: pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/: chat_settings.json  events.json  functionsTools.py  main.py  utils.py
src/assets/: img.txt
