[project]
name = "AiAgent"
version = "1.0.0"
description = "app to chat with an ai agent build with Google Ai"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "aritracodespy", email = "you@example.com" }
]
dependencies = [
  "flet==0.28.3",
  "google-genai>=0.4.1",
  "tradingview_ta>=3.2.5",
  "ddgs>=1.1.3",
  "requests>=2.31.0"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Ai"

# company name to display in about app dialogs
company = "Flet_aritracodespy"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

#app = "src/main.py"

assets = ["src/events.json"]
permissions = ["internet"]

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
    
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}

[tool.flet.android.permission] # --android-permissions
"Android.permission.INTERNET" = true



[tool.flet.android.feature] # --android-features
"android.hardware.INTERNET" = true

[tool.flet.android.meta_data]
"com.google.android.gms.ads.APPLICATION_ID" = "ca-app-pub-xxxxxxxxxxxxxxxx~yyyyyyyyyy"
