[project]
name = "notebridge notepad"
version = "1.0.0"
description = "A notepad application with flask backend"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "aritracodespy", email = "you@example.com" }
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "NoteBridge"

# company name to display in about app dialogs
company = "Flet_aritracodespy"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

#app = "src/main.py"

# assets = ["src/chat_settings.json"]
permissions = ["internet"]

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}

[tool.flet.android.permission] # --android-permissions
"Android.permission.INTERNET" = true



[tool.flet.android.feature] # --android-features
"android.hardware.INTERNET" = true

[tool.flet.android.meta_data]
"com.google.android.gms.ads.APPLICATION_ID" = "ca-app-pub-xxxxxxxxxxxxxxxx~yyyyyyyyyy"
